--- a/.github/workflows/CocoaPods.yml
+++ b/.github/workflows/CocoaPods.yml
@@ -1,15 +1,14 @@
-name: CocoaPods
+name: Cocoapods
 
 on: [push]
 
 jobs:
-  build:
-
+  GlossButtonNode:
     runs-on: macos-latest
-
     steps:
-    - name: Force xcode 11.4
-      run: sudo xcode-select -switch /Applications/Xcode_11.4.app
-    - uses: actions/checkout@v2
-    - name: Lint Cocoapods
-      run: pod lib lint
+      - uses: maxim-lobanov/setup-xcode@v1.2.3
+        with:
+          xcode-version: "12.4"
+      - uses: actions/checkout@v2
+      - name: Lint Cocoapods
+        run: pod lib lint GlossButtonNode.podspec
