--- a/.github/workflows/CocoaPods.yml
+++ b/.github/workflows/CocoaPods.yml
@@ -4,11 +4,11 @@ on: [push]
 
 jobs:
   GlossButtonNode:
-    runs-on: macos-latest
+    runs-on: macos-12
     steps:
       - uses: maxim-lobanov/setup-xcode@v1.2.3
         with:
-          xcode-version: "12.4"
+          xcode-version: "13.4"
       - uses: actions/checkout@v2
       - name: Lint Cocoapods
         run: pod lib lint --allow-warnings GlossButtonNode.podspec
